--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "local": "nodemon --exec babel-node ./src/server.js"
+    "babel": "nodemon --exec babel-node ./src/server.js",
+    "cluster": "MODO='cluster' nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
