--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
